refactor: refactor config and command